# solidworks-batch-export

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt  runner.py  swbatch.spec
docs/: ARCHITECTURE.md  DEVELOPMENT.md  LOGGING.md  PACKAGING.md  USER_GUIDE.md
swbatch/: __init__.py  __main__.py
swbatch/cli/: __init__.py  main.py
swbatch/core/: __init__.py  config.py  converter.py  formats.py  logging_config.py  paths.py  scanner.py  validation.py
swbatch/gui/: __init__.py  main.py
